--- a/Boilerplate/Application/LaunchScreen.storyboard
+++ b/Boilerplate/Application/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,25 +18,25 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGO.001" translatesAutoresizingMaskIntoConstraints="NO" id="68B-05-yav">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="68B-05-yav" secondAttribute="bottom" id="1eb-bi-yMr"/>
-                            <constraint firstAttribute="trailing" secondItem="68B-05-yav" secondAttribute="trailing" id="D9J-1i-l9Y"/>
-                            <constraint firstItem="68B-05-yav" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="aGX-8b-Nwh"/>
-                            <constraint firstItem="68B-05-yav" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="oas-Xd-TY4"/>
+                            <constraint firstItem="68B-05-yav" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Kqn-Ku-cyL"/>
+                            <constraint firstItem="68B-05-yav" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="dVi-1N-fHh"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="68B-05-yav" secondAttribute="bottom" id="hEb-Zy-66w"/>
+                            <constraint firstAttribute="trailing" secondItem="68B-05-yav" secondAttribute="trailing" id="nLa-Ic-2RL"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-194.40000000000001" y="388.15592203898052"/>
+            <point key="canvasLocation" x="-194.40000000000001" y="387.93103448275866"/>
         </scene>
     </scenes>
     <resources>
